--- a/html/karyaDirections.html
+++ b/html/karyaDirections.html
@@ -19,29 +19,20 @@
       <div class="header__menu" id="home">
         <a href="../index.html" class="dropbtn">Home</a>
       </div>
-      u
       <div class="header__menu" id="races">
         <a href="#" class="dropbtn">Races</a>
         <div class="dropbtn__content">
           <a href="racesKarya.html">Karya Olympus Trail 20km </a>
-          <a href="#">Titnata Trail 8.5km</a>
-          <a href="#">Guidelines</a>
-        </div>
-      </div>
-
-      <div class="header__menu" id="anouncements">
-        <a class="dropbtn" href=""> Anouncements </a>
-        <div class="dropbtn__content">
-          <a href="#"> 2021 </a>
-          <a href="#"> 2020</a>
+          <a href="racesTitnata.html">Titnata Trail 8.5km</a>
+          <a href="racesGuidelines.html">Guidelines</a>
         </div>
       </div>
 
       <div class="header__menu" id="karya">
         <a class="dropbtn" href=""> Karya </a>
         <div class="dropbtn__content">
-          <a href="#"> History</a>
-          <a href="#"> How to get here </a>
+          <a href="karyaHistory.html"> History</a>
+          <a href="karyaDirections.html"> How to get here </a>
           <a href="#"> Where to stay</a>
           <a href="#"> What to see </a>
           <a href="#"> Hiking trails in the area</a>
@@ -69,10 +60,62 @@
     <main>
       <section>
         <div class="body-container">
-          <h1 class="heading-primary">Karya Olympus Trail</h1>
-          <div class="grid-container">
-            <div class="grid-container__left"></div>
-            <div class="grid-container__right"></div>
+          <h1 class="heading-primary">ΠΩΣ ΘΑ ΦΤΑΣΕΤΕ</h1>
+          <div class="post-container text-normal">
+            <div class="banner">
+              <p>
+                Η Καρυά Ολύμπου είναι ένα μικρό, αλλά όμορφο και ζωντανό χωριό
+                στα βόρεια του Νομού Λάρισας, στα Β.Α. της πρώην Επαρχίας και
+                τώρα του Δήμου Ελασσόνας, σε υψόμετρο 950 μέτρων, στην αγκαλιά
+                των νότιων πλαγιών του Ολύμπου. Μπορεί να ανεβεί κάποιος στην
+                Καρυά ακολουθώντας τις παρακάτω διαδρομές, που σήμερα όλες είναι
+                ασφαλτοστρωμένες:
+              </p>
+            </div>
+            <ol class="marker marg-bot">
+              <li>
+                <p>
+                  Η επαρχιακή οδός Ελασσόνας- Καλλιθέας- Ολυμπιάδας- Κρυόβρυσης-
+                  Σκαμνιάς- Καρυάς, μήκους 40 χλμ. Από την οδό αυτή διεξάγεται
+                  και η συγκοινωνία της Καρυάς με τον άλλο κόσμο με λεωφορεία
+                  του υπεραστικού Κ.Τ.Ε.Λ. Λάρισας.
+                </p>
+                <img class="img-cont" src="/img/elassona.png" alt="" />
+              </li>
+              <li>
+                <p>
+                  Η νέα οδός Λάρισας- Αμπελώνα- Ροδιάς- Σκαμνιάς- Καρυάς, μήκους
+                  52 χλμ., που συντόμευσε κατά πολύ την απόσταση της Καρυάς από
+                  τη Λάρισα.
+                </p>
+                <img class="img-cont" src="/img/rodia.png" alt="" />
+              </li>
+              <li>
+                <p>
+                  Ο δρόμος Λάρισας- Μακρυχωρίου- Γόννων- Καλλιπεύκης- Καρυάς,
+                  μήκους 68 χλμ.
+                </p>
+                <img class="img-cont" src="/img/goni.png" alt="" />
+              </li>
+              <li>
+                <p>
+                  Η οδός Πλαταμώνα- Παλιού Παντελεήμονα-Καλλιπεύκης-Καρυάς,
+                  μήκους 41 χλμ.
+                </p>
+                <img class="img-cont" src="/img/platamon.png" alt="" />
+              </li>
+              <li>
+                <p>O δρόμος Λεπτοκαρυάς- Καρυάς, μήκους μόνο 24 χλμ.</p>
+                <img class="img-cont" src="/img/leptokarya.png" alt="" />
+              </li>
+            </ol>
+            Πέντε διαδρομές ανηφορικές και δύσκολες, με πολλές και κουραστικές
+            στροφές, που σε αποζημιώνουν από την υπέροχη θέα προς τα υψίπεδα της
+            Ελασσόνας η πρώτη, τον κάμπο του Τυρνάβου και της Λάρισας η 2η και
+            3η, και προς τα παράλια της Πιερίας, το Αιγαίο και τη Χαλκιδική οι
+            δυο τελευταίες, που διασχίζουν δυο από τα ωραιότερα δάση της
+            πατρίδας μας. Τις δυο διαδρομές αυτές ακολουθούν όσοι ανεβαίνουν
+            στην Καρυά από την Κατερίνη και τη Θεσσαλονίκη.
           </div>
         </div>
       </section>
