--- a/html/racesKarya.html
+++ b/html/racesKarya.html
@@ -28,18 +28,10 @@
         </div>
       </div>
 
-      <div class="header__menu" id="anouncements">
-        <a class="dropbtn" href=""> Anouncements </a>
-        <div class="dropbtn__content">
-          <a href="#"> 2021 </a>
-          <a href="#"> 2020</a>
-        </div>
-      </div>
-
       <div class="header__menu" id="karya">
         <a class="dropbtn" href=""> Karya </a>
         <div class="dropbtn__content">
-          <a href="#"> History</a>
+          <a href="karyaHistory.html"> History</a>
           <a href="#"> How to get here </a>
           <a href="#"> Where to stay</a>
           <a href="#"> What to see </a>
@@ -49,8 +41,8 @@
       <div class="header__menu" id="results">
         <a class="dropbtn" href=""> Results </a>
         <div class="dropbtn__content">
-          <a href="#"> 2021 </a>
-          <a href="#"> 2020</a>
+          <a href="announcements2021.html"> 2021 </a>
+          <a href="announcements2020.html"> 2020</a>
         </div>
       </div>
       <div class="header__menu" id="media">
