--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <a href="#" class="dropbtn">Races</a>
         <div class="dropbtn__content">
           <a href="html/racesKarya.html">Karya Olympus Trail 20km </a>
-          <a href="#">Titnata Trail 8.5km</a>
-          <a href="#">Guidelines</a>
+          <a href="html/racesTitnata.html">Titnata Trail 8.5km</a>
+          <a href="html/racesGuidelines.html">Guidelines</a>
         </div>
       </div>
 
@@ -50,8 +50,8 @@
       <div class="header__menu" id="results">
         <a class="dropbtn" href=""> Results </a>
         <div class="dropbtn__content">
-          <a href="#"> 2021 </a>
-          <a href="#"> 2020</a>
+          <a href="html/announcements2021.html"> 2021 </a>
+          <a href="html/announcements2020.html"> 2020</a>
         </div>
       </div>
       <div class="header__menu" id="media">
