links are working

--- a/html/karyaHistory.html
+++ b/html/karyaHistory.html
@@ -33,16 +33,16 @@
         <div class="dropbtn__content">
           <a href="karyaHistory.html"> History</a>
           <a href="karyaDirections.html"> How to get here </a>
-          <a href="#"> Where to stay</a>
-          <a href="#"> What to see </a>
-          <a href="#"> Hiking trails in the area</a>
+          <a href="karyaAccommodation.html"> Where to stay</a>
+          <a href="karyaSights.html"> What to see </a>
+          <a href="karyaTrails.html"> Hiking trails in the area</a>
         </div>
       </div>
       <div class="header__menu" id="results">
         <a class="dropbtn" href=""> Results </a>
         <div class="dropbtn__content">
-          <a href="announcements2021.html"> 2021 </a>
-          <a href="announcements2020.html"> 2020</a>
+          <a href="resultsKarya2021.html"> Karya Olympus Trail </a>
+          <a href="resultsTitnata2021.html"> Titnata Trail</a>
         </div>
       </div>
       <div class="header__menu" id="media">
