--- a/html/racesTitnata.html
+++ b/html/racesTitnata.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="shortcut icon" type="image/png" href="../img/favicon.png" />
 
-    <title>Karya Olympus Trail</title>
+    <title>Titnata Trail</title>
   </head>
   <body>
     <header class="header" id="head">
@@ -32,17 +32,17 @@
         <a class="dropbtn" href=""> Karya </a>
         <div class="dropbtn__content">
           <a href="karyaHistory.html"> History</a>
-          <a href="#"> How to get here </a>
-          <a href="#"> Where to stay</a>
-          <a href="#"> What to see </a>
-          <a href="#"> Hiking trails in the area</a>
+          <a href="karyaDirections.html"> How to get here </a>
+          <a href="karyaAccommodation.html"> Where to stay</a>
+          <a href="karyaSights.html"> What to see </a>
+          <a href="karyaTrails.html"> Hiking trails in the area</a>
         </div>
       </div>
       <div class="header__menu" id="results">
         <a class="dropbtn" href=""> Results </a>
         <div class="dropbtn__content">
-          <a href="announcements2021.html"> 2021 </a>
-          <a href="announcements2020.html"> 2020</a>
+          <a href="resultsKarya2021.html"> Karya Olympus Trail </a>
+          <a href="resultsTitnata2021.html"> Titnata Trail</a>
         </div>
       </div>
       <div class="header__menu" id="media">
@@ -89,49 +89,50 @@
           </div>
 
           <img class="race-map" src="../img/tt.png" alt="race map" />
-          <p class="heading-secondary">Detailed course description</p>
+          <div class="bg-wrapper">
+            <p class="heading-secondary">Detailed course description</p>
 
-          <h3 class="heading-tertiary">
-            The course of the race follows a marked trail. The distance is 8.5km
-            and the positive vertical gain is 600m.
-          </h3>
+            <h3 class="heading-tertiary">
+              The course of the race follows a marked trail. The distance is
+              8.5km and the positive vertical gain is 600m.
+            </h3>
 
-          <div class="course-grid">
-            <div class="course-grid__left">
-              <ul class="text-normal marker">
-                <li class="margin-bot">
-                  <p class="text-normal__bold">STATION 1: SELOMA</p>
-                  <ul>
-                    <li>Water</li>
-                    <li>Distance from start: 2km</li>
-                  </ul>
-                </li>
+            <!-- <div class="course-grid">
+         <div class="course-grid__left"> -->
+            <ul class="text-normal marker">
+              <li class="margin-bot">
+                <p class="text-normal__bold">STATION 1: SELOMA</p>
+                <ul>
+                  <li>Water</li>
+                  <li>Distance from start: 2km</li>
+                </ul>
+              </li>
 
-                <li class="margin-bot">
-                  <p class="text-normal__bold">STATION 2: PROVATOPAZARO</p>
-                  <ul>
-                    <li>Distance from start: 5.3km</li>
-                    <li>S2-S2: 3.3km</li>
-                  </ul>
-                </li>
+              <li class="margin-bot">
+                <p class="text-normal__bold">STATION 2: PROVATOPAZARO</p>
+                <ul>
+                  <li>Distance from start: 5.3km</li>
+                  <li>S2-S2: 3.3km</li>
+                </ul>
+              </li>
 
-                <li>
-                  <p class="text-normal__bold">KARYA (FINISH)</p>
-                  <ul>
-                    <li>Distance from start: 8.5km</li>
-                    <li>Distance S2-F: 3.4km</li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
+              <li>
+                <p class="text-normal__bold">KARYA (FINISH)</p>
+                <ul>
+                  <li>Distance from start: 8.5km</li>
+                  <li>Distance S2-F: 3.4km</li>
+                </ul>
+              </li>
+            </ul>
+            <!--            </div>
 
             <div class="course-grid__right">
               <img src="../img/kS1.png" alt="" />
               <img src="../img/kS2.png" alt="" />
               <img src="../img/kS3.png" alt="" />
             </div>
+          </div> -->
           </div>
-
           <div class="wrapper">
             <iframe
               src="https://iframe.tracedetrail.fr/en/trace/output2/111350/osm/2296295311"
