--- a/html/announcements2021.html
+++ b/html/announcements2021.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
-    <title>Karya Olympus Trail</title>
+    <title>Announcements 2021</title>
   </head>
 
   <body>
@@ -29,29 +29,21 @@
         </div>
       </div>
 
-      <div class="header__menu" id="anouncements">
-        <a class="dropbtn" href=""> Anouncements </a>
-        <div class="dropbtn__content">
-          <a href="announcements2021.html"> 2021 </a>
-          <a href="announcements2020.html"> 2020</a>
-        </div>
-      </div>
-
       <div class="header__menu" id="karya">
         <a class="dropbtn" href=""> Karya </a>
         <div class="dropbtn__content">
           <a href="karyaHistory.html"> History</a>
           <a href="karyaDirections.html"> How to get here </a>
-          <a href="#"> Where to stay</a>
-          <a href="#"> What to see </a>
-          <a href="#"> Hiking trails in the area</a>
+          <a href="karyaAccommodation.html"> Where to stay</a>
+          <a href="karyaSights.html"> What to see </a>
+          <a href="karyaTrails.html"> Hiking trails in the area</a>
         </div>
       </div>
       <div class="header__menu" id="results">
         <a class="dropbtn" href=""> Results </a>
         <div class="dropbtn__content">
-          <a href="#"> 2021 </a>
-          <a href="#"> 2020</a>
+          <a href="resultsKarya2021.html"> Karya Olympus Trail </a>
+          <a href="resultsTitnata2021.html"> Titnata Trail</a>
         </div>
       </div>
       <div class="header__menu" id="media">
