--- a/html/karyaDirections.html
+++ b/html/karyaDirections.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="shortcut icon" type="image/png" href="../img/favicon.png" />
 
-    <title>Karya Olympus Trail</title>
+    <title>How to Get Here</title>
   </head>
   <body>
     <header class="header" id="head">
@@ -33,16 +33,16 @@
         <div class="dropbtn__content">
           <a href="karyaHistory.html"> History</a>
           <a href="karyaDirections.html"> How to get here </a>
-          <a href="#"> Where to stay</a>
-          <a href="#"> What to see </a>
-          <a href="#"> Hiking trails in the area</a>
+          <a href="karyaAccommodation.html"> Where to stay</a>
+          <a href="karyaSights.html"> What to see </a>
+          <a href="karyaTrails.html"> Hiking trails in the area</a>
         </div>
       </div>
       <div class="header__menu" id="results">
         <a class="dropbtn" href=""> Results </a>
         <div class="dropbtn__content">
-          <a href="#"> 2021 </a>
-          <a href="#"> 2020</a>
+          <a href="resultsKarya2021.html"> Karya Olympus Trail </a>
+          <a href="resultsTitnata2021.html"> Titnata Trail</a>
         </div>
       </div>
       <div class="header__menu" id="media">
