relative img paths

--- a/html/karyaDirections.html
+++ b/html/karyaDirections.html
@@ -80,7 +80,7 @@
                   και η συγκοινωνία της Καρυάς με τον άλλο κόσμο με λεωφορεία
                   του υπεραστικού Κ.Τ.Ε.Λ. Λάρισας.
                 </p>
-                <img class="img-cont" src="/img/elassona.png" alt="" />
+                <img class="img-cont" src="../img/elassona.png" alt="" />
               </li>
               <li>
                 <p>
@@ -88,25 +88,25 @@
                   52 χλμ., που συντόμευσε κατά πολύ την απόσταση της Καρυάς από
                   τη Λάρισα.
                 </p>
-                <img class="img-cont" src="/img/rodia.png" alt="" />
+                <img class="img-cont" src="../img/rodia.png" alt="" />
               </li>
               <li>
                 <p>
                   Ο δρόμος Λάρισας- Μακρυχωρίου- Γόννων- Καλλιπεύκης- Καρυάς,
                   μήκους 68 χλμ.
                 </p>
-                <img class="img-cont" src="/img/goni.png" alt="" />
+                <img class="img-cont" src="../img/goni.png" alt="" />
               </li>
               <li>
                 <p>
                   Η οδός Πλαταμώνα- Παλιού Παντελεήμονα-Καλλιπεύκης-Καρυάς,
                   μήκους 41 χλμ.
                 </p>
-                <img class="img-cont" src="/img/platamon.png" alt="" />
+                <img class="img-cont" src="../img/platamon.png" alt="" />
               </li>
               <li>
                 <p>O δρόμος Λεπτοκαρυάς- Καρυάς, μήκους μόνο 24 χλμ.</p>
-                <img class="img-cont" src="/img/leptokarya.png" alt="" />
+                <img class="img-cont" src="../img/leptokarya.png" alt="" />
               </li>
             </ol>
             Πέντε διαδρομές ανηφορικές και δύσκολες, με πολλές και κουραστικές
