--- a/html/karyaHistory.html
+++ b/html/karyaHistory.html
@@ -67,7 +67,7 @@
               <div class="post-content__vis">
                 <div class="post-content__vis--1">
                   <figure>
-                    <img src="/img/karya1.jpg" alt="" />
+                    <img src="../img/karya1.jpg" alt="" />
                     <figcaption class="u-center">
                       <em>Η Καρυά στη σκιά της Τιτνάτας</em>
                     </figcaption>
@@ -119,7 +119,7 @@
 
                 <div class="post-content__vis--1">
                   <figure>
-                    <img src="/img/kanalon1.jpg" alt="" />
+                    <img src="../img/kanalon1.jpg" alt="" />
                     <figcaption class="u-center">
                       <em>Μοναστήρι Κανάλων</em>
                     </figcaption>
@@ -154,7 +154,7 @@
               <div class="post-content__vis">
                 <div class="post-content__vis--1">
                   <figure>
-                    <img src="/img/karya2.jpg" alt="" />
+                    <img src="../img/karya2.jpg" alt="" />
                     <figcaption class="u-center">
                       <em>Το δάσος στο Μπεχτέσι</em>
                     </figcaption>
