--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 
   <body>
     <header class="header" id="head">
+      <!-- <div class="header__menu" id="facebook">
+        <a href="https://www.facebook.com/KaryaOlympusTrail">
+          <ion-icon class="dropbtn" name="logo-facebook"> </ion-icon>
+        </a>
+    </div> -->
+
       <div class="header__menu" id="home">
         <a href="index.html" class="dropbtn">Home</a>
       </div>
