--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <p class="post__date">25 April 2021 00:09</p>
               <img
                 class="pop-up"
-                src="../img/Anavoli.jpg"
+                src="img/Anavoli.jpg"
                 width="70%"
                 height="50%"
               />
