--- a/index.html
+++ b/index.html
@@ -73,65 +73,65 @@
     </header>
 
     <section class="hero">
-      <div class="card-grid">
-        <div class="card-box">
-          <div class="card">
-            <div class="card__side card__side--front">
-              <div class="card__picture card__picture--1">&nbsp;</div>
-              <h4 class="card__heading">
-                <span class="card__heading-span card__heading-span--1">
-                  Karya Olympus Trail
-                </span>
-              </h4>
-              <div class="card__details">
-                <ul>
-                  <li>25km</li>
-                  <li>1500m D+</li>
-                </ul>
-              </div>
-            </div>
-            <div class="card__side card__side--back card__side--back-1">
-              <div class="card__picture card__picture--1">
-                <p class="card__price-only">Race fee</p>
-              </div>
-              <div class="card__price-box">
-                <p class="card__price-value">20€</p>
-                <a class="btn btn--blue" href="html/racesKarya.html"
-                  >More info!</a
-                >
-              </div>
-            </div>
-          </div>
+      <!-- <div class="card-grid"> -->
+      <!-- <div class="card-box"> -->
 
-          <div class="card" style="margin-left: 25rem">
-            <div class="card__side card__side--front">
-              <div class="card__picture card__picture--1">&nbsp;</div>
-              <h4 class="card__heading">
-                <span class="card__heading-span card__heading-span--1">
-                  Titnata Trail
-                </span>
-              </h4>
-              <div class="card__details">
-                <ul>
-                  <li>8.5km</li>
-                  <li>650m D+</li>
-                </ul>
-              </div>
-            </div>
-            <div class="card__side card__side--back card__side--back-1">
-              <div class="card__picture card__picture--1">
-                <p class="card__price-only">Race fee</p>
-              </div>
-              <div class="card__price-box">
-                <p class="card__price-value">10€</p>
-                <a class="btn btn--blue" href="html/racesTitnata.html"
-                  >More info!</a
-                >
-              </div>
-            </div>
+      <div class="card card-grid__l">
+        <div class="card__side card__side--front">
+          <div class="card__picture card__picture--1">&nbsp;</div>
+          <h4 class="card__heading">
+            <span class="card__heading-span card__heading-span--1">
+              Karya Olympus Trail
+            </span>
+          </h4>
+          <div class="card__details">
+            <ul>
+              <li>25km</li>
+              <li>1500m D+</li>
+            </ul>
+          </div>
+        </div>
+        <div class="card__side card__side--back card__side--back-1">
+          <div class="card__picture card__picture--1">
+            <p class="card__price-only">Race fee</p>
+          </div>
+          <div class="card__price-box">
+            <p class="card__price-value">20€</p>
+            <a class="btn btn--blue" href="html/racesKarya.html">More info!</a>
           </div>
         </div>
       </div>
+
+      <!-- <div class="card" style="margin-left: 25rem"> -->
+      <div class="card card-grid__r">
+        <div class="card__side card__side--front">
+          <div class="card__picture card__picture--1">&nbsp;</div>
+          <h4 class="card__heading">
+            <span class="card__heading-span card__heading-span--1">
+              Titnata Trail
+            </span>
+          </h4>
+          <div class="card__details">
+            <ul>
+              <li>8.5km</li>
+              <li>650m D+</li>
+            </ul>
+          </div>
+        </div>
+        <div class="card__side card__side--back card__side--back-1">
+          <div class="card__picture card__picture--1">
+            <p class="card__price-only">Race fee</p>
+          </div>
+          <div class="card__price-box">
+            <p class="card__price-value">10€</p>
+            <a class="btn btn--blue" href="html/racesTitnata.html"
+              >More info!</a
+            >
+          </div>
+        </div>
+      </div>
+      <!-- </div> -->
+      <!--</div> -->
     </section>
 
     <main>
