mobile img rotation

--- a/html/racesKarya.html
+++ b/html/racesKarya.html
@@ -201,11 +201,12 @@
         }
       });
 
-      //img rescale
+      //img rescale on click
 
       const raceimg = document.getElementById("raceimg");
       raceimg.addEventListener("click", function () {
         raceimg.classList.toggle("img-click");
+        raceimg.classList.toggle("img-rotate");
       });
     </script>
 
