--- a/html/karyaDirections.html
+++ b/html/karyaDirections.html
@@ -72,41 +72,106 @@
                 ασφαλτοστρωμένες:
               </p>
             </div>
-            <ol class="marker marg-bot">
+            <ol class="marker-red">
               <li>
                 <p>
-                  Η επαρχιακή οδός Ελασσόνας- Καλλιθέας- Ολυμπιάδας- Κρυόβρυσης-
-                  Σκαμνιάς- Καρυάς, μήκους 40 χλμ. Από την οδό αυτή διεξάγεται
-                  και η συγκοινωνία της Καρυάς με τον άλλο κόσμο με λεωφορεία
-                  του υπεραστικού Κ.Τ.Ε.Λ. Λάρισας.
+                  Η επαρχιακή οδός
+                  <span class="text-red"
+                    >Ελασσόνας &#8212; Καλλιθέας &#8212; Ολυμπιάδας &#8212;
+                    Κρυόβρυσης&#8212; Σκαμνιάς &#8212;Καρυάς</span
+                  >, μήκους 40 χλμ. Από την οδό αυτή διεξάγεται και η
+                  συγκοινωνία της Καρυάς με τον άλλο κόσμο με λεωφορεία του
+                  υπεραστικού Κ.Τ.Ε.Λ. Λάρισας.
                 </p>
-                <img class="img-cont" src="../img/elassona.png" alt="" />
+                <div class="wrapper">
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m34!1m12!1m3!1d196132.89249041656!2d22.157644877290583!3d39.816491675789564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m19!3e0!4m5!1s0x1358885c595d47a1%3A0x400bd2ce2b99c30!2sLarisa!3m2!1d39.639022399999995!2d22.4191254!4m5!1s0x13585cd5c336eb6d%3A0x1933a649f1e579c6!2sElassona!3m2!1d39.8949802!2d22.1890872!4m5!1s0x13586d1a605cf3dd%3A0x41418d8d3e841ea5!2sKarya!3m2!1d39.9857365!2d22.3909237!5e0!3m2!1sen!2sgr!4v1632935757566!5m2!1sen!2sgr"
+                    width="600"
+                    height="450"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                  ></iframe>
+                </div>
+                <!-- <img class="img-cont" src="../img/elassona.png" alt="" /> -->
               </li>
               <li>
                 <p>
-                  Η νέα οδός Λάρισας- Αμπελώνα- Ροδιάς- Σκαμνιάς- Καρυάς, μήκους
-                  52 χλμ., που συντόμευσε κατά πολύ την απόσταση της Καρυάς από
-                  τη Λάρισα.
+                  <span class="text-red">
+                    Λάρισας&#8212; Αμπελώνα&#8212; Ροδιάς&#8212; Σκαμνιάς&#8212;
+                    Καρυάς</span
+                  >, μήκους 52 χλμ., που συντόμευσε κατά πολύ την απόσταση της
+                  Καρυάς από τη Λάρισα.
                 </p>
-                <img class="img-cont" src="../img/rodia.png" alt="" />
+                <div class="wrapper">
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m34!1m12!1m3!1d196144.8567045029!2d22.270275476847342!3d39.81229902804488!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m19!3e0!4m5!1s0x1358885c595d47a1%3A0x400bd2ce2b99c30!2sLarisa!3m2!1d39.639022399999995!2d22.4191254!4m5!1s0x135864686fa17d2b%3A0x9ae7b079c218d56!2sRodia!3m2!1d39.799005699999995!2d22.3661176!4m5!1s0x13586d1a605cf3dd%3A0x41418d8d3e841ea5!2sKarya!3m2!1d39.9857365!2d22.3909237!5e0!3m2!1sen!2sgr!4v1632936390255!5m2!1sen!2sgr"
+                    width="600"
+                    height="450"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                  ></iframe>
+                </div>
+                <!-- <img class="img-cont" src="../img/rodia.png" alt="" /> -->
               </li>
               <li>
                 <p>
-                  Ο δρόμος Λάρισας- Μακρυχωρίου- Γόννων- Καλλιπεύκης- Καρυάς,
-                  μήκους 68 χλμ.
+                  Ο δρόμος
+                  <span class="text-red"
+                    >Λάρισας &#8212;Μακρυχωρίου &#8212;Γόννων &#8212;Καλλιπεύκης
+                    &#8212;Καρυάς</span
+                  >, μήκους 68 χλμ.
                 </p>
-                <img class="img-cont" src="../img/goni.png" alt="" />
+                <div class="wrapper">
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m40!1m12!1m3!1d196144.8567045029!2d22.30502142684735!3d39.81229902804488!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m25!3e0!4m5!1s0x1358885c595d47a1%3A0x400bd2ce2b99c30!2sLarisa!3m2!1d39.639022399999995!2d22.4191254!4m5!1s0x13587ba45f027bc3%3A0x400bd2ce2b99d30!2sMakrychori!3m2!1d39.803764099999995!2d22.4914418!4m5!1s0x1358725e6b01a7fd%3A0x500bd2ce2babf10!2sKallipefki!3m2!1d39.966695099999995!2d22.4602763!4m5!1s0x13586d1a605cf3dd%3A0x41418d8d3e841ea5!2sKarya!3m2!1d39.9857365!2d22.3909237!5e0!3m2!1sen!2sgr!4v1632936444807!5m2!1sen!2sgr"
+                    width="600"
+                    height="450"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                  ></iframe>
+                </div>
+                <!--  <img class="img-cont" src="../img/goni.png" alt="" /> -->
               </li>
               <li>
                 <p>
-                  Η οδός Πλαταμώνα- Παλιού Παντελεήμονα-Καλλιπεύκης-Καρυάς,
-                  μήκους 41 χλμ.
+                  Η οδός
+                  <span class="text-red"
+                    >Πλαταμώνα&#8212; Παλιού
+                    Παντελεήμονα&#8212;Καλλιπεύκης&#8212;Καρυάς</span
+                  >, μήκους 41 χλμ.
                 </p>
-                <img class="img-cont" src="../img/platamon.png" alt="" />
+                <div class="wrapper">
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m34!1m12!1m3!1d97831.35624630493!2d22.43739772369763!3d39.980967773213386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m19!3e0!4m5!1s0x13580adac6ec579d%3A0x500bd2ce2ba4530!2sPlatamonas!3m2!1d39.9901304!2d22.623862499999998!4m5!1s0x1358725e6b01a7fd%3A0x500bd2ce2babf10!2sKallipefki!3m2!1d39.966695099999995!2d22.4602763!4m5!1s0x13586d1a605cf3dd%3A0x41418d8d3e841ea5!2sKarya!3m2!1d39.9857365!2d22.3909237!5e0!3m2!1sen!2sgr!4v1632936487650!5m2!1sen!2sgr"
+                    width="600"
+                    height="450"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                  ></iframe>
+                </div>
+                <!-- <img class="img-cont" src="../img/platamon.png" alt="" /> -->
               </li>
               <li>
-                <p>O δρόμος Λεπτοκαρυάς- Καρυάς, μήκους μόνο 24 χλμ.</p>
-                <img class="img-cont" src="../img/leptokarya.png" alt="" />
+                <p>
+                  O δρόμος
+                  <span class="text-red">Λεπτοκαρυάς&#8212; Καρυάς</span>,
+                  μήκους μόνο 24 χλμ.
+                </p>
+                <div class="wrapper">
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d48891.55482128932!2d22.449159057677157!3d40.01465292983819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x13580be89b481967%3A0xfefdc4fd2fcd8fc3!2sLeptokarya!3m2!1d40.0600581!2d22.5627377!4m5!1s0x13586d1a605cf3dd%3A0x41418d8d3e841ea5!2sKarya!3m2!1d39.9857365!2d22.3909237!5e0!3m2!1sen!2sgr!4v1632936522405!5m2!1sen!2sgr"
+                    width="600"
+                    height="450"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                  ></iframe>
+                </div>
+                <!-- <img class="img-cont" src="../img/leptokarya.png" alt="" /> -->
               </li>
             </ol>
             Πέντε διαδρομές ανηφορικές και δύσκολες, με πολλές και κουραστικές
