--- a/html/racesKarya.html
+++ b/html/racesKarya.html
@@ -33,9 +33,9 @@
         <div class="dropbtn__content">
           <a href="karyaHistory.html"> History</a>
           <a href="karyaDirections.html"> How to get here </a>
-          <a href="karyaAccommodation.html"> Where to stay</a>
-          <a href="karyaSights.html"> What to see </a>
-          <a href="karyaTrails.html"> Hiking trails in the area</a>
+          <a href="#"> Where to stay</a>
+          <a href="#"> What to see </a>
+          <a href="#"> Hiking trails in the area</a>
         </div>
       </div>
       <div class="header__menu" id="results">
@@ -206,7 +206,6 @@
       const raceimg = document.getElementById("raceimg");
       raceimg.addEventListener("click", function () {
         raceimg.classList.toggle("img-click");
-        raceimg.classList.toggle("img-rotate");
       });
     </script>
 
