--- a/html/signupKarya.html
+++ b/html/signupKarya.html
@@ -27,15 +27,14 @@
           <a href="racesGuidelines.html">Guidelines</a>
         </div>
       </div>
-
       <div class="header__menu" id="karya">
         <a class="dropbtn" href=""> Karya </a>
         <div class="dropbtn__content">
           <a href="karyaHistory.html"> History</a>
           <a href="karyaDirections.html"> How to get here </a>
-          <a href="karyaAccommodation.html"> Where to stay</a>
-          <a href="karyaSights.html"> What to see </a>
-          <a href="karyaTrails.html"> Hiking trails in the area</a>
+          <a href="#"> Where to stay</a>
+          <a href="#"> What to see </a>
+          <a href="#"> Hiking trails in the area</a>
         </div>
       </div>
       <div class="header__menu" id="results">
