--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         <div class="dropbtn__content">
           <a href="html/karyaHistory.html"> History</a>
           <a href="html/karyaDirections.html"> How to get here </a>
-          <a href="html/karyaAccommodation.html"> Where to stay</a>
-          <a href="html/karyaSights.html"> What to see </a>
-          <a href="html/karyaTrails.html"> Hiking trails in the area</a>
+          <a href="#"> Where to stay</a>
+          <a href="#"> What to see </a>
+          <a href="#"> Hiking trails in the area</a>
         </div>
       </div>
       <div class="header__menu" id="results">
