--- a/html/announcements2020.html
+++ b/html/announcements2020.html
@@ -34,9 +34,9 @@
         <div class="dropbtn__content">
           <a href="karyaHistory.html"> History</a>
           <a href="karyaDirections.html"> How to get here </a>
-          <a href="karyaAccommodation.html"> Where to stay</a>
-          <a href="karyaSights.html"> What to see </a>
-          <a href="karyaTrails.html"> Hiking trails in the area</a>
+          <a href="#"> Where to stay</a>
+          <a href="#"> What to see </a>
+          <a href="#"> Hiking trails in the area</a>
         </div>
       </div>
       <div class="header__menu" id="results">
