--- a/html/racesTitnata.html
+++ b/html/racesTitnata.html
@@ -33,9 +33,9 @@
         <div class="dropbtn__content">
           <a href="karyaHistory.html"> History</a>
           <a href="karyaDirections.html"> How to get here </a>
-          <a href="karyaAccommodation.html"> Where to stay</a>
-          <a href="karyaSights.html"> What to see </a>
-          <a href="karyaTrails.html"> Hiking trails in the area</a>
+          <a href="#"> Where to stay</a>
+          <a href="#"> What to see </a>
+          <a href="#"> Hiking trails in the area</a>
         </div>
       </div>
       <div class="header__menu" id="results">
@@ -104,33 +104,35 @@
               8.5km and the positive vertical gain is 600m.
             </h3>
 
-            <!-- <div class="course-grid">
-         <div class="course-grid__left"> -->
-            <ul class="text-normal marker">
-              <li>
-                <p class="text-normal__bold">STATION 1: &nbsp SELOMA</p>
-                <ul class="marker-down">
-                  <li>Water</li>
-                  <li>Distance from start: 2km</li>
-                </ul>
-              </li>
+            <div class="course-grid">
+              <ul class="text-normal marker-up">
+                <li>
+                  <p class="text-normal__bold">STATION 1: &nbsp SELOMA</p>
+                  <ul class="marker-down">
+                    <li>Water</li>
+                    <li>Distance from start: 2km</li>
+                  </ul>
+                </li>
 
-              <li>
-                <p class="text-normal__bold">STATION 2: &nbsp PROVATOPAZARO</p>
-                <ul class="marker-down">
-                  <li>Distance from start: 5.3km</li>
-                  <li>S2-S2: 3.3km</li>
-                </ul>
-              </li>
+                <li>
+                  <p class="text-normal__bold">
+                    STATION 2: &nbsp PROVATOPAZARO
+                  </p>
+                  <ul class="marker-down">
+                    <li>Distance from start: 5.3km</li>
+                    <li>S2-S2: 3.3km</li>
+                  </ul>
+                </li>
 
-              <li>
-                <p class="text-normal__bold">KARYA &nbsp (FINISH)</p>
-                <ul class="marker-down">
-                  <li>Distance from start: 8.5km</li>
-                  <li>Distance S2-F: 3.4km</li>
-                </ul>
-              </li>
-            </ul>
+                <li>
+                  <p class="text-normal__bold">KARYA &nbsp (FINISH)</p>
+                  <ul class="marker-down">
+                    <li>Distance from start: 8.5km</li>
+                    <li>Distance S2-F: 3.4km</li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
             <!--            </div>
 
             <div class="course-grid__right">
